deployment-ngo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngo
  template:
    metadata:
      labels:
        app: ngo
    spec:
      nodeSelector:
        kubernetes.io/hostname: kube-track
      containers:
      - name: ngo
        image: pro1116/ngo:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ngo-service
spec:
  selector:
    app: ngo
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
