service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubetrack-service
spec:
  selector:
    app: kubetrack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
