ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubetrack-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kubetrack.yourdomain.com  # Change to your domain or use AWS ELB IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubetrack-service
                port:
                  number: 80
